# rest-django-cookiecutter

./: LICENSE  README.md
{{cookiecutter.repo_name}}/: manage.py  pyproject.toml  setup.cfg
{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/: celery.py  database.py  settings.py  urls.py  wsgi.py
{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/users/: apps.py  tasks.py  urls.py
